# Starrail_Clone_Core

./: CMakeLists.txt  main.cpp
include/: BattleCore.h  Character.h  ConstantNameChinese.h  ConstantNameEnglish.h  Constants.h  commonBuffs.h  utils.h
include/Characters/: Herta.h  TrailBlazerPhysic.h
include/Characters/Monsters/: SilvermaneSoldier.h
src/: BattleCore.cpp  Character.cpp  utils.cpp
src/Characters/: Herta.cpp  TrailBlazerPhysic.cpp
src/Characters/Monsters/: SilvermaneSoldier.cpp
test/: battleCoreMiniGame.cpp  characterTest.cpp
